W4P1-analyzing-tabular-data-with-pandas, and other

--- a/W3P2-python-numerical-computing-with-numpy.ipynb
+++ b/W3P2-python-numerical-computing-with-numpy.ipynb
@@ -1080,11 +1080,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "climate_data = np.genfromtxt('climate.txt', delimiter=',', skip_header=1)"
+    "climate_data = np.genfromtxt('data/climate.txt', delimiter=',', skip_header=1)"
    ]
   },
   {
