Part 8 Data Visualization using Python, Matplotlib and Seaborn

--- a/W3P3-100-numpy-exercises.ipynb
+++ b/W3P3-100-numpy-exercises.ipynb
@@ -42,27 +42,24 @@
      "output_type": "stream",
      "text": [
       "uwsd \n",
-      "last updated: Sat Sep 05 2020 03:34:21 \n",
+      "last updated: Wed Sep 09 2020 10:56:09 \n",
       "\n",
       "CPython 3.8.5\n",
       "IPython 7.17.0\n",
       "\n",
       "numpy 1.19.1\n",
-      "pandas 1.1.0\n",
-      "matplotlib 3.3.1\n",
-      "seaborn 0.10.1\n",
       "jovian 0.2.18\n"
      ]
     }
    ],
    "source": [
     "%reload_ext watermark\n",
-    "%watermark -a uwsd -u -v -n -t -p numpy,pandas,matplotlib,seaborn,jovian"
+    "%watermark -a uwsd -u -v -n -t -p numpy,jovian"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "[jovian] Attempting to save notebook..\n",
-      "[jovian] Creating a new project \"uwsd/W3P3-100-numpy-exercises\"\n",
+      "[jovian] Updating notebook \"uwsd/w3p3-100-numpy-exercises\" on https://jovian.ml/\n",
       "[jovian] Uploading notebook..\n",
       "[jovian] Capturing environment..\n",
       "[jovian] Committed successfully! https://jovian.ml/uwsd/w3p3-100-numpy-exercises\n"
@@ -164,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +218,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +408,7 @@
        "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +440,7 @@
        "       44, 45, 46, 47, 48, 49])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +471,7 @@
        "       15, 14, 13, 12, 11, 10])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +502,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +531,7 @@
        "(array([0, 1, 4], dtype=int64),)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +584,7 @@
        "'https://jovian.ml/uwsd/w3p3-100-numpy-exercises'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +614,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,18 +634,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6, 5, 8],\n",
-       "       [9, 3, 6],\n",
-       "       [0, 9, 8]])"
+       "array([[6, 8, 1],\n",
+       "       [4, 7, 5],\n",
+       "       [4, 8, 4]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,62 +659,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 13. Create a 10x10 array with random values and find the minimum and maximum values (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum:   64\n",
+      "Maximum: 9998\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "maxtrix_10x10 = np.random.randint(0, 10000, 100).reshape(10, 10)\n",
+    "print(f'Minimum: {maxtrix_10x10.min():4d}')\n",
+    "print(f'Maximum: {maxtrix_10x10.max():4d}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 14. Create a random vector of size 30 and find the mean value (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5332.666666666667"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector_30 = np.random.randint(0, 10000, 30).mean()\n",
+    "vector_30"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 15. Create a 2d array with 1 on the border and 0 inside (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_2d = np.ones((10, 5))\n",
+    "array_2d[1: -1, 1: -1] = 0\n",
+    "array_2d"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 16. How to add a border (filled with 0's) around an existing array? (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_2d = np.zeros((10, 5))\n",
+    "array_2d_border = np.ones((array_2d.shape[0] + 2, array_2d.shape[1] + 2))\n",
+    "array_2d_border[1: -1, 1: -1] = array_2d\n",
+    "array_2d_border"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 17. What is the result of the following expression? (★☆☆)\n",
     "```python\n",
     "0 * np.nan\n",
@@ -731,52 +812,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 * np.nan\n",
+    "np.nan == np.nan\n",
+    "np.inf > np.nan\n",
+    "np.nan - np.nan\n",
+    "np.nan in set([np.nan])\n",
+    "0.3 == 3 * 0.1"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 18. Create a 5x5 matrix with values 1,2,3,4 just below the diagonal (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0.],\n",
+       "       [0., 2., 0., 0., 0.],\n",
+       "       [0., 0., 3., 0., 0.],\n",
+       "       [0., 0., 0., 4., 0.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.zeros((5, 5))\n",
+    "x[1: 5, 0: -1] = np.diag([1, 2, 3, 4])\n",
+    "x"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 19. Create a 8x8 matrix and fill it with a checkerboard pattern (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.],\n",
+       "       [0., 1., 0., 1., 0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0., 1., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_8x8 = np.zeros([8, 8])\n",
+    "\n",
+    "for index_x, index_y in np.ndindex(matrix_8x8.shape):\n",
+    "    matrix_8x8[index_x, index_y] = (index_x + index_y) % 2\n",
+    "matrix_8x8  "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 20. Consider a (6,7,8) shape array, what is the index (x,y,z) of the 100th element?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 5, 3)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unravel_index(99, (6, 7, 8))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -787,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,9 +954,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[jovian] Attempting to save notebook..\n",
+      "[jovian] Updating notebook \"uwsd/w3p3-100-numpy-exercises\" on https://jovian.ml/\n",
+      "[jovian] Uploading notebook..\n",
+      "[jovian] Capturing environment..\n",
+      "[jovian] Committed successfully! https://jovian.ml/uwsd/w3p3-100-numpy-exercises\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://jovian.ml/uwsd/w3p3-100-numpy-exercises'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "jovian.commit()"
    ]
@@ -807,34 +999,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 21. Create a checkerboard 8x8 matrix using the tile function (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1], [1, 0], [0, 1]]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3 # for 8x8 matrix\n",
+    "matrix = [] \n",
+    "for i in range(n): \n",
+    "    matrix.append(list(np.tile([0, 1], int(n / 2))) if i % 2 == 0 else list(np.tile([1, 0], int(n / 2)))) \n",
+    "matrix"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 22. Normalize a 5x5 random matrix (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 91 56 88]\n",
+      " [49 22 30 93 41]\n",
+      " [98  6 15 89 59]\n",
+      " [ 1  0 47 11 68]\n",
+      " [36 31  8 98 18]]\n",
+      "[[0.         0.10204082 0.9285714  0.5714286  0.8979592 ]\n",
+      " [0.5        0.2244898  0.30612245 0.9489796  0.41836736]\n",
+      " [1.         0.06122449 0.15306123 0.90816325 0.6020408 ]\n",
+      " [0.01020408 0.         0.47959185 0.1122449  0.6938776 ]\n",
+      " [0.36734694 0.31632653 0.08163265 1.         0.18367347]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def normalize(matrix):\n",
+    "    matrix /= np.max(np.abs(matrix_5x5))\n",
+    "    return matrix\n",
+    "\n",
+    "matrix_5x5 = np.random.randint(100, size=(5, 5))\n",
+    "print(matrix_5x5)\n",
+    "print(normalize(matrix_5x5.astype(np.float32)))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 23. Create a custom dtype that describes a color as four unsigned bytes (RGBA) (★☆☆)"
    ]
   },
