--- a/W4P1-analyzing-tabular-data-with-pandas.ipynb
+++ b/W4P1-analyzing-tabular-data-with-pandas.ipynb
@@ -7454,9 +7454,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "zerotopandas",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "zerotopandas"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
